@@ -1,3 +1,7 @@
+2003-05-14  Loren J. Rittle  <ljrittle@acm.org>
+
+	* testsuite/thread/pthread4.cc: Tweak test.
+
 2003-05-13  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/27_io/ios_base/cons/copy_neg.cc: Remove
